Изменено по ПЗ №4

--- a/Lesson02-Homework/Wheather/app/src/main/res/values/strings.xml
+++ b/Lesson02-Homework/Wheather/app/src/main/res/values/strings.xml
@@ -6,6 +6,8 @@
     <string name="showWeather">Показать</string>
     <string name="to_back">Назад</string>
     <string name="enterCity">Введите город</string>
+    <string name="meow">Мяу</string>
+
 
 
 
