Изменения приложения MyWeather

--- a/Lesson05AndroidWeather/app/src/main/res/values/strings.xml
+++ b/Lesson05AndroidWeather/app/src/main/res/values/strings.xml
@@ -15,7 +15,7 @@
     <string name="pressureStr">Давление</string>
     <string name="showWeather">Показать</string>
     <string name="to_back">Назад</string>
-    <string name="enterCity">Введите город</string>
+    <string name="enterCity">Выберите город</string>
     <string name="meow">Мяу</string>
     <string name="selectcity">Выбрать</string>
     <string name="selectcityStr">Выберете город</string>
