--- a/MyWeather-v2/app/src/main/res/values/strings.xml
+++ b/MyWeather-v2/app/src/main/res/values/strings.xml
@@ -19,7 +19,9 @@
     <string name="temperatureStr">Температура</string>
     <string name="no_data">Нет данных</string>
     <string name="windStr">Ветер</string>
+    <string name="showWindStr">Будет показан ветер</string>
     <string name="pressureStr">Давление</string>
+    <string name="showPressureStr">Будет показано давление</string>
     <string name="showWeather">Показать</string>
     <string name="to_back">Назад</string>
     <string name="selectcity">Выбрать</string>
@@ -37,11 +39,5 @@
     <string name="info">Информация</string>
     <string name="about_creator">О разработчике</string>
     <string name="feedback">Обратная связь</string>
-
-
-
-    <string name="text_test">Санкт-Петербург является не только красивейшей культурной столицей, но и городом с захватывающей историей, наполненной великими победами и тяжелейшими бедами. Именно в Петербурге произошли многие важнейшие для страны события, определившие дальнейший ход развития истории не только страны, но и мира. Каждому гостю города, и уж тем более каждому горожанину необходимо знать о важнейших вехах истории великого города над вольной Невой. По идее царя Санкт-Петербург должен был принять роль политической и культурной столицы страны, стать «новым Римом». Согласно задумке, город должен воплотить государственную мощь и влияние Европы: детище Петра и впрямь стало воистину Северной Жемчужиной, оправдавшей все надежды великого правителя.
-
-Изначально крепость была заложена для совсем иных целей. Петропавловская крепость создана с целью контролирования Невы и Большой Невки: ведь шли боевые действия против Швеции, и город буквально явился ребенком войны.</string>
 
 </resources>
